--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ doc
 # jeweler generated
 pkg
 
+spec/database.yml
+
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
 # * Create a file at ~/.gitignore
