--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ doc
 # jeweler generated
 pkg
 
+.idea/
 spec/database.yml
+spec/debug.log
 
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
